--- a/apps/home/src/index.html
+++ b/apps/home/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="author" href="humans.txt" />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
