feat(robots): add robot.txt
Add robots.txt and a sitemap for search engine crawling.

Additionally remove favicon link as it's omission is preferred.

See: https://mathiasbynens.be/notes/rel-shortcut-icon

--- a/apps/home/src/index.html
+++ b/apps/home/src/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <title>Sam Vendittelli | Full-stack Web Developer</title>
+    <meta name="description" content="Hello, my name is Sam Vendittelli. I'm a full-stack web developer and Scrum Master.">
     <base href="/" />
 
-    <link rel="author" href="humans.txt" />
+    <meta property="og:title" content="Sam Vendittelli | Full-stack Web Developer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vendittelli.co.uk/">
+    <meta property="og:description" content="Hello, my name is Sam Vendittelli. I'm a full-stack web developer and Scrum Master.">
+    <meta property="og:locale" content="en_GB" />
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="author" href="humans.txt" />
   </head>
   <body>
     <div id="root"></div>
