refactor: format index.html

--- a/apps/home/src/index.html
+++ b/apps/home/src/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Sam Vendittelli | Full-stack Web Developer</title>
-    <meta name="description" content="Hello, my name is Sam Vendittelli. I'm a full-stack web developer and Scrum Master.">
+    <meta
+      name="description"
+      content="Hello, my name is Sam Vendittelli. I'm a full-stack web developer and Scrum Master."
+    />
     <base href="/" />
 
-    <meta property="og:title" content="Sam Vendittelli | Full-stack Web Developer">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://vendittelli.co.uk/">
-    <meta property="og:description" content="Hello, my name is Sam Vendittelli. I'm a full-stack web developer and Scrum Master.">
+    <meta
+      property="og:title"
+      content="Sam Vendittelli | Full-stack Web Developer"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vendittelli.co.uk/" />
+    <meta
+      property="og:description"
+      content="Hello, my name is Sam Vendittelli. I'm a full-stack web developer and Scrum Master."
+    />
     <meta property="og:locale" content="en_GB" />
 
     <link rel="author" href="humans.txt" />
