--- a/apps/home/src/index.html
+++ b/apps/home/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'"
+    />
+
     <title>Sam Vendittelli | Full-stack Web Developer</title>
     <meta
       name="description"
