--- a/apps/home/src/index.html
+++ b/apps/home/src/index.html
@@ -28,6 +28,18 @@
     />
     <meta property="og:locale" content="en_GB" />
 
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="mask-icon"
+      href="/assets/safari-pinned-tab.svg"
+      color="#282a36"
+    />
+
     <link rel="author" href="humans.txt" />
   </head>
   <body>
