--- a/apps/home/src/index.html
+++ b/apps/home/src/index.html
@@ -6,7 +6,7 @@
 
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'none'; script-src 'self'; connect-src 'self'; font-src fonts.gstatic.com; img-src 'self' images.vendittelli.co.uk; style-src 'self' fonts.googleapis.com; base-uri 'self'; form-action 'self'"
+      content="default-src 'none'; script-src 'self'; connect-src 'self' https://api.vendittelli.co.uk https://api.emailjs.com; font-src fonts.gstatic.com; img-src 'self' images.vendittelli.co.uk; style-src 'self' fonts.googleapis.com; base-uri 'self'; form-action 'self'"
     />
 
     <title>Sam Vendittelli | Full-stack Web Developer</title>
